<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_title">Email</string>
    <string name="email_hint">Type a valid email</string>
    <string name="password_title">Password</string>
    <string name="password_hint">Type e nice password</string>
    <string name="signup_button">Create New Account</string>
    <string name="login_button">Login</string>
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_message">It`s nice to have you here! Click in the Instructions button bellow if you haven`t done it before. \n \n Enjoy the app!</string>
    <string name="instructions_button">INSTRUCTIONS</string>
    <string name="instructions_title">Instructions</string>
    <string name="instructions">Instructions List</string>
    <string name="add_shoes_button">Add Shoes</string>
    <string name="logout">Logout</string>
    <string name="save_shoe_button">Save Shoe</string>
    <string name="cancel_button">Cancel</string>

    <string name="shoe_description">Shoe Description</string>
    <string name="shoe_size">Shoe size: %.1f</string>
    <string name="shoe_company">Brand: %s</string>
    <string name="shoe_name">Shoe Name</string>

    <string name="add_new_shoe">Add New Shoe</string>
    <string name="invalid_input_warning">Invalid inputs!!!</string>

    <string name="shoe_name_hint">shoe Name</string>
    <string name="shoe_company_hint">shoe Company</string>
    <string name="shoe_size_hint">Shoe Size</string>
    <string name="shoe_description_hint">Description</string>
</resources>
